--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 </head>
 
 <body>
@@ -68,28 +71,205 @@
         <div class="card">
           <div class="box">
             <i class="fas fa-desktop"></i>
-              <div class="text">Web Development</div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
-            </div>
+            <div class="text">Web Development</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
+          </div>
         </div>
 
         <div class="card">
           <div class="box">
             <i class="fas fa-mobile"></i>
-              <div class="text">Mobile Development</div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
-            </div>
+            <div class="text">Mobile Development</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
+          </div>
         </div>
 
         <div class="card">
           <div class="box">
             <i class="far fa-chart-bar"></i>
-              <div class="text">Project Management</div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
-            </div>
+            <div class="text">Project Management</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
+          </div>
         </div>
 
       </div>
+    </div>
+  </section>
+
+  <!-- Skills Section -->
+  <section class="skills" id="skills">
+    <div class="max-width">
+      <h2 class="title">My Skills</h2>
+      <div class="skills-content">
+        <div class="column left">
+          <div class="text">My skills & experiences</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus facere libero exercitationem magni
+            temporibus, excepturi qui hic harum in nihil ut distinctio tempora perspiciatis similique ipsum tenetur quis
+            alias mollitia error quam atque placeat porro dicta. Aperiam possimus obcaecati quas corporis! Recusandae,
+            delectus est odio nam, quo voluptates ducimus autem accusamus repellendus possimus dolor eaque obcaecati ex!
+            Dolores, aut accusamus!</p>
+          <a href="#">Read More</a>
+        </div>
+        <div class="column right">
+          <div class="bars"></div>
+          <div class="info">
+            <span>Data Analysis</span>
+            <span>Good</span>
+          </div>
+          <div class="line DA"></div>
+
+          <div class="bars"></div>
+          <div class="info">
+            <span>Project Management</span>
+            <span>Good</span>
+          </div>
+          <div class="line PM"></div>
+
+          <div class="bars"></div>
+          <div class="info">
+            <span>HTML</span>
+            <span>Good</span>
+          </div>
+          <div class="line HTML"></div>
+
+          <div class="bars"></div>
+          <div class="info">
+            <span>CSS</span>
+            <span>Good</span>
+          </div>
+          <div class="line CSS"></div>
+
+          <div class="bars"></div>
+          <div class="info">
+            <span>Javascript</span>
+            <span>Intermediate</span>
+          </div>
+          <div class="line JS"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Teams Section -->
+  <section class="teams" id="teams">
+    <div class="max-width">
+      <h2 class="title">My Previous Teams</h2>
+      <div class="carousel owl-carousel">
+        <div class="card">
+          <div class="box">
+            <img src="pic/PO/PO.jpg" alt="">
+            <div class="text">Rangga Dewa</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="pic/FE/FE1.jpg" alt="">
+            <div class="text">Azani Ramadhan</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="pic/FE/FE2.jpg" alt="">
+            <div class="text">Ryan A Rizaldi</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="pic/BE/BE.jpg" alt="">
+            <div class="text">Arman Zulfikri</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="pic/BE/BE2.jpg" alt="">
+            <div class="text">Julia Fransiska</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="pic/BE/BE3.JPG" alt="">
+            <div class="text">Waindini Nur Fitri</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="pic/RN/RN.jpg" alt="">
+            <div class="text">Fandy Lin</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <div class="max-width">
+      <h2 class="title">Contact Me</h2>
+        <div class="contact-content">
+          <div class="column left">
+            <div class="text">May i help?</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias cumque architecto, quod qui quas quaerat!</p>
+            <div class="icons">
+              <div class="row">
+                <i class="fab fa-linkedin"></i>
+                <div class="info">
+                  <a href="https://www.linkedin.com/in/mwhyus/">LinkedIn</a>
+                </div>
+              </div>
+
+              <div class="row">
+                <i class="fab fa-instagram"></i>
+                <div class="info">
+                  <a href="https://www.instagram.com/mwhyus">Instagram</a>
+                </div>
+              </div>
+
+              <div class="row">
+                <i class="fab fa-github"></i>
+                <div class="info">
+                  <a href="https://github.com/mwhyus">Github</a>
+                </div>
+              </div>
+
+              <div class="row">
+                <i class="fab fa-gitlab"></i>
+                <div class="info">
+                  <a href="https://gitlab.com/mwhyus">Gitlab</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="column right">
+            <div class="text">Message me</div>
+            <form action="#">
+              <div class="field">
+                <div class="field name">
+                  <input type="text" placeholder="Name">
+                </div>
+                <div class="field email">
+                  <input type="email" placeholder="What's your email?">
+                </div>
+
+              </div>
+            </form>
+          </div>
+
+        </div>
     </div>
   </section>
 
