--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
@@ -17,12 +18,12 @@
     <div class="max-width">
       <div class="logo"><a href="#">Port<span>folio.</span></a></div>
       <ul class='menu'>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Experiences</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Previous Teammates</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#home" class="menu-btn">Home</a></li>
+        <li><a href="#about"class="menu-btn">About</a></li>
+        <li><a href="#tech">Experiences</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#teams">Previous Teammates</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
       <div class="menu-btn">
         <i class="fas fa-bars"></i>
@@ -37,7 +38,7 @@
       <div class="home-content">
         <div class="text-1">Hello, My name is</div>
         <div class="text-2">Muhammad Wahyu Santoso</div>
-        <div class="text-3">And I'm a <span>Programmer</span></div>
+        <div class="text-3">I'm Doing <span class="typing"></span></div>
         <a href="#">Hire Me</a>
       </div>
     </div>
@@ -181,6 +182,14 @@
         </div>
         <div class="card">
           <div class="box">
+            <img src="pic/FE/FE4.jpg" alt="">
+            <div class="text">Juhendra Halim</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
             <img src="pic/BE/BE.jpg" alt="">
             <div class="text">Arman Zulfikri</div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
@@ -205,6 +214,14 @@
         </div>
         <div class="card">
           <div class="box">
+            <img src="pic/BE/BE4.jpeg" alt="">
+            <div class="text">Agus Priyatin</div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
+              voluptas.</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
             <img src="pic/RN/RN.jpg" alt="">
             <div class="text">Fandy Lin</div>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
@@ -219,59 +236,74 @@
   <section class="contact" id="contact">
     <div class="max-width">
       <h2 class="title">Contact Me</h2>
-        <div class="contact-content">
-          <div class="column left">
-            <div class="text">May i help?</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias cumque architecto, quod qui quas quaerat!</p>
-            <div class="icons">
-              <div class="row">
-                <i class="fab fa-linkedin"></i>
-                <div class="info">
-                  <a href="https://www.linkedin.com/in/mwhyus/">LinkedIn</a>
-                </div>
+      <div class="contact-content">
+        <div class="column left">
+          <div class="text">May i help?</div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias cumque architecto, quod qui quas quaerat!
+          </p>
+          <div class="icons">
+            <div class="row">
+              <i class="fab fa-linkedin"></i>
+              <div class="info">
+                <a href="https://www.linkedin.com/in/mwhyus/">LinkedIn</a>
               </div>
+            </div>
 
-              <div class="row">
-                <i class="fab fa-instagram"></i>
-                <div class="info">
-                  <a href="https://www.instagram.com/mwhyus">Instagram</a>
-                </div>
+            <div class="row">
+              <i class="fab fa-instagram"></i>
+              <div class="info">
+                <a href="https://www.instagram.com/mwhyus">Instagram</a>
               </div>
+            </div>
 
-              <div class="row">
-                <i class="fab fa-github"></i>
-                <div class="info">
-                  <a href="https://github.com/mwhyus">Github</a>
-                </div>
+            <div class="row">
+              <i class="fab fa-github"></i>
+              <div class="info">
+                <a href="https://github.com/mwhyus">Github</a>
               </div>
+            </div>
 
-              <div class="row">
-                <i class="fab fa-gitlab"></i>
-                <div class="info">
-                  <a href="https://gitlab.com/mwhyus">Gitlab</a>
-                </div>
+            <div class="row">
+              <i class="fab fa-gitlab"></i>
+              <div class="info">
+                <a href="https://gitlab.com/mwhyus">Gitlab</a>
               </div>
             </div>
           </div>
-
-          <div class="column right">
-            <div class="text">Message me</div>
-            <form action="#">
-              <div class="field">
-                <div class="field name">
-                  <input type="text" placeholder="Name">
-                </div>
-                <div class="field email">
-                  <input type="email" placeholder="What's your email?">
-                </div>
-
-              </div>
-            </form>
-          </div>
-
         </div>
+
+        <div class="column right">
+          <div class="text">Message me</div>
+          <form action="#">
+            <div class="fields">
+              <div class="field name">
+                <input type="text" placeholder="Name" required>
+              </div>
+              <div class="field email">
+                <input type="email" placeholder="What's your email?" required>
+              </div>
+
+            </div>
+            <div class="field">
+              <input type="text" placeholder="Subject" required>
+            </div>
+            <div class="field textarea">
+              <textarea cols="30" rows="10" placeholder="Describe Project.." required></textarea>
+            </div>
+            <div class="button">
+              <button type="submit">Send messange</button>
+            </div>
+          </form>
+        </div>
+
+      </div>
     </div>
   </section>
+
+  <!-- Footer Section -->
+  <footer>
+    <span>Created By <a href="#">Muhammad Wahyu Santoso</a> | <span class="far fa-copyright"></span>2020 All rights reserved</span>
+  </footer>
 
   <script src="script.js"></script>
 
