--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <div class="logo"><a href="#">Port<span>folio.</span></a></div>
       <ul class='menu'>
         <li><a href="#home" class="menu-btn">Home</a></li>
-        <li><a href="#about"class="menu-btn">About</a></li>
-        <li><a href="#tech">Experiences</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#teams">Previous Teammates</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about" class="menu-btn">About</a></li>
+        <li><a href="#tech" class="menu-btn">Experiences</a></li>
+        <li><a href="#skills" class="menu-btn">Skills</a></li>
+        <li><a href="#teams" class="menu-btn">Previous Teammates</a></li>
+        <li><a href="#contact" class="menu-btn">Contact</a></li>
       </ul>
       <div class="menu-btn">
         <i class="fas fa-bars"></i>
@@ -39,7 +39,7 @@
         <div class="text-1">Hello, My name is</div>
         <div class="text-2">Muhammad Wahyu Santoso</div>
         <div class="text-3">I'm Doing <span class="typing"></span></div>
-        <a href="#">Hire Me</a>
+        <a href="#contact">Contact Me</a>
       </div>
     </div>
   </section>
@@ -291,7 +291,7 @@
               <textarea cols="30" rows="10" placeholder="Describe Project.." required></textarea>
             </div>
             <div class="button">
-              <button type="submit">Send messange</button>
+              <button type="submit" onclick="myFunction()">Send message</button>
             </div>
           </form>
         </div>
@@ -302,8 +302,15 @@
 
   <!-- Footer Section -->
   <footer>
-    <span>Created By <a href="#">Muhammad Wahyu Santoso</a> | <span class="far fa-copyright"></span>2020 All rights reserved</span>
+    <span>Created By <a href="#">Muhammad Wahyu Santoso</a> | <span class="far fa-copyright"></span> 2020 All rights reserved</span>
   </footer>
+
+  <!-- Alert -->
+  <script>
+    function myFunction() {
+      alert('Sorry this feature is not ready yet. Please contact me through my social media')
+    }
+  </script>
 
   <script src="script.js"></script>
 
