--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="text-1">Hello, My name is</div>
         <div class="text-2">Muhammad Wahyu Santoso</div>
         <div class="text-3">I'm Doing <span class="typing"></span></div>
-        <a href="#contact">Contact Me</a>
+        <a href="https://www.linkedin.com/in/mwhyus/" target="blank">Get Connect</a>
       </div>
     </div>
   </section>
@@ -54,9 +54,11 @@
           <img src="pic/wahyu2.jpg" alt="">
         </div>
         <div class="column right">
-          <div class="text">I'm Wahyu and I'm a <span>Programmer</span></div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, odit. Ex libero quo eum. Temporibus aut quo
-            incidunt ullam, a soluta vel corrupti sapiente minima quasi, eveniet facilis. Molestias, dolorum.</p>
+          <div class="text">I'm Wahyu and I'm</div>
+          <p class="txt">Passionate in business, technology, and experienced leadership in the largest youth-run
+            organization,
+            shaping myself through ups and downs experiences during my journey, and I enjoy when I do cross-cultural
+            learning. <span>See a challenge as an opportunity to grow.</span></p>
           <a href="#">Download CV</a>
         </div>
       </div>
@@ -70,27 +72,37 @@
       <div class="tech-content">
 
         <div class="card">
-          <div class="box">
-            <i class="fas fa-desktop"></i>
-            <div class="text">Web Development</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
-          </div>
+          <a href="https://drive.google.com/drive/folders/1eon5gSELTBj3yrmSbL7aYn3bHlD_8iOm?usp=sharing" target="blank"
+            style="color: white;">
+            <div class="box">
+              <i class="fas fa-desktop"></i>
+              <div class="text">Web Development</div>
+              <p>Building web application using HTML, CSS, and Javascript or with React Framework.</p>
+            </div>
+          </a>
         </div>
 
         <div class="card">
-          <div class="box">
-            <i class="fas fa-mobile"></i>
-            <div class="text">Mobile Development</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
-          </div>
+          <a href="https://drive.google.com/drive/folders/1BBJDTmQ8wjjCQD8Gmdxjfdiury-Qlxvj?usp=sharing" target="blank"
+            style="color: white;">
+            <div class="box">
+              <i class="fas fa-mobile"></i>
+              <div class="text">Mobile Development</div>
+              <p>I'm experience of building mobile application using React Native.</p>
+            </div>
+          </a>
         </div>
 
         <div class="card">
-          <div class="box">
-            <i class="far fa-chart-bar"></i>
-            <div class="text">Project Management</div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, quasi.</p>
-          </div>
+          <a href="https://drive.google.com/drive/folders/1VFHGBzI83wlfsw3t_Jykmzic8z426QlS?usp=sharing" target="blank"
+            style="color: white;">
+            <div class="box">
+              <i class="far fa-chart-bar"></i>
+              <div class="text">Project Management</div>
+              <p>Joined in an international organization that focuses on developing leadership through social project.
+              </p>
+            </div>
+          </a>
         </div>
 
       </div>
@@ -103,13 +115,14 @@
       <h2 class="title">My Skills</h2>
       <div class="skills-content">
         <div class="column left">
-          <div class="text">My skills & experiences</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus facere libero exercitationem magni
-            temporibus, excepturi qui hic harum in nihil ut distinctio tempora perspiciatis similique ipsum tenetur quis
-            alias mollitia error quam atque placeat porro dicta. Aperiam possimus obcaecati quas corporis! Recusandae,
-            delectus est odio nam, quo voluptates ducimus autem accusamus repellendus possimus dolor eaque obcaecati ex!
-            Dolores, aut accusamus!</p>
-          <a href="#">Read More</a>
+          <div class="text">My skills & experiences.</div>
+          <p>Actively learning IT since July 2020 by joining Agile Bootcamp and React Native Bootcamp, even though i do
+            cross background and facing so many obstacles of
+            learning tech stack in IT, but i do really eager to improve my knowledge and skills on this field. Not only
+            learning IT, but since 2016 untill 2019 i'm actively improve softskills through international organization
+            and i took so many responsible on each roles from Team Member, Management Board, untill Executive Board
+            and learnt how to handle local projects with international clients untill national project. </p>
+          <a href="#contact">Contact Me</a>
         </div>
         <div class="column right">
           <div class="bars"></div>
@@ -160,72 +173,75 @@
           <div class="box">
             <img src="pic/PO/PO.jpg" alt="">
             <div class="text">Rangga Dewa</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
+            <p>Rangga was in charge as an Product owner of SayurHub and handling an idea to be a real product that we
+              made.</p>
           </div>
         </div>
-        <div class="card">
-          <div class="box">
-            <img src="pic/FE/FE1.jpg" alt="">
-            <div class="text">Azani Ramadhan</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="box">
-            <img src="pic/FE/FE2.jpg" alt="">
-            <div class="text">Ryan A Rizaldi</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="box">
-            <img src="pic/FE/FE4.jpg" alt="">
-            <div class="text">Juhendra Halim</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
-          </div>
-        </div>
+
         <div class="card">
           <div class="box">
             <img src="pic/BE/BE.jpg" alt="">
             <div class="text">Arman Zulfikri</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
+            <p>Arman was in charge as an Scrum Master and BE developer of SayurHub and bridging the communication
+              between Team Development and Product Owner.</p>
           </div>
         </div>
         <div class="card">
           <div class="box">
             <img src="pic/BE/BE2.jpg" alt="">
             <div class="text">Julia Fransiska</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
+            <p>Team Dev - BE, Julia was in charge to fulfill the database of SayurHub application both for Web and
+              Mobile App.</p>
           </div>
         </div>
         <div class="card">
           <div class="box">
             <img src="pic/BE/BE3.JPG" alt="">
             <div class="text">Waindini Nur Fitri</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
+            <p>Team Dev - BE, Dini was in charge to fulfill the database of SayurHub application both for Web and Mobile
+              App.</p>
           </div>
         </div>
         <div class="card">
           <div class="box">
             <img src="pic/BE/BE4.jpeg" alt="">
             <div class="text">Agus Priyatin</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
+            <p>Team Dev - BE, Agus was in charge to fulfill the database of SayurHub application both for Web and Mobile
+              App</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
+            <img src="pic/FE/FE1.jpg" alt="">
+            <div class="text">Azani Ramadhan</div>
+            <p>Team Dev - FE, Azani was in charge to create Web application using React and collaborate with back end
+              side to ensure the App run smoothly</p>
           </div>
         </div>
         <div class="card">
           <div class="box">
+            <img src="pic/FE/FE2.jpg" alt="">
+            <div class="text">Ryan A Rizaldi</div>
+            <p>Team Dev - FE, Ryan was in charge to create Web application using React and collaborate with back end
+              side to ensure the App run smoothly</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="box">
+            <img src="pic/FE/FE4.jpg" alt="">
+            <div class="text">Juhendra Halim</div>
+            <p>Team Dev - FE, Juhendra was in charge to create Web application using React and collaborate with back end
+              side to ensure the App run smoothly</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="box">
             <img src="pic/RN/RN.jpg" alt="">
             <div class="text">Fandy Lin</div>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A perferendis, quisquam quas sint earum
-              voluptas.</p>
+            <p>Team Dev- RN, Fandy was in charge to build an mobile application using React Native and collaborate to
+              Back End to ensure the App run smoothly</p>
           </div>
         </div>
       </div>
@@ -239,34 +255,34 @@
       <div class="contact-content">
         <div class="column left">
           <div class="text">May i help?</div>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias cumque architecto, quod qui quas quaerat!
-          </p>
+          <p>Hi, this is my social media and my version control system where i put my increment inside. Let's make
+            connection and talk.</p>
           <div class="icons">
             <div class="row">
               <i class="fab fa-linkedin"></i>
               <div class="info">
-                <a href="https://www.linkedin.com/in/mwhyus/">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/mwhyus/" target="blank">LinkedIn</a>
               </div>
             </div>
 
             <div class="row">
               <i class="fab fa-instagram"></i>
               <div class="info">
-                <a href="https://www.instagram.com/mwhyus">Instagram</a>
+                <a href="https://www.instagram.com/mwhyus" target="blank">Instagram</a>
               </div>
             </div>
 
             <div class="row">
               <i class="fab fa-github"></i>
               <div class="info">
-                <a href="https://github.com/mwhyus">Github</a>
+                <a href="https://github.com/mwhyus" target="blank">Github</a>
               </div>
             </div>
 
             <div class="row">
               <i class="fab fa-gitlab"></i>
               <div class="info">
-                <a href="https://gitlab.com/mwhyus">Gitlab</a>
+                <a href="https://gitlab.com/mwhyus" target="blank">Gitlab</a>
               </div>
             </div>
           </div>
@@ -291,7 +307,7 @@
               <textarea cols="30" rows="10" placeholder="Describe Project.." required></textarea>
             </div>
             <div class="button">
-              <button type="submit" onclick="myFunction()">Send message</button>
+              <button type="submit" onclick="alertNotification()">Send message</button>
             </div>
           </form>
         </div>
@@ -302,13 +318,14 @@
 
   <!-- Footer Section -->
   <footer>
-    <span>Created By <a href="#">Muhammad Wahyu Santoso</a> | <span class="far fa-copyright"></span> 2020 All rights reserved</span>
+    <span>Created By <a href="#">Muhammad Wahyu Santoso</a> | <span class="far fa-copyright"></span> 2020 All rights
+      reserved</span>
   </footer>
 
   <!-- Alert -->
   <script>
-    function myFunction() {
-      alert('Sorry this feature is not ready yet. Please contact me through my social media')
+    function alertNotification() {
+      alert('Sorry this feature is not ready yet. Please contact me through social media')
     }
   </script>
 
